--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,15 @@
-<div class="container-fluid">
-  <div class="row">
-      <div class="col" *ngFor="let mainLink of mainLinks;">
-          {{mainLink}}
-      </div>
+<nav class="navbar navbar-dark bg-dark">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item" *ngFor="let mainLink of mainLinks; first as isFirst">
+          <a class="nav-link active" aria-current="page" href="#" *ngIf="isFirst; ngIfElse elseBlock">{{mainLink}}</a>
+          <a class="nav-link" aria-current="page" href="#" #elseBlock>{{mainLink}}</a>
+        </li>
+      </ul>
+    </div>
   </div>
-</div>
+</nav>
