--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,8 @@
-<footer>
-    <ul>
-        <li>Contact us</li>
-        <li>Copyrights reserved</li>
-    </ul>
-</footer>
+<div class="container">
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item" *ngFor="let itemFooter of footerList">{{itemFooter}}</li>
+        </ul>
+        <p class="text-center text-muted">All Copyrights Reserved</p>
+    </footer>
+</div>
