--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,9 @@
 <div class="container">
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item" *ngFor="let itemFooter of footerList">{{itemFooter}}</li>
+            <li class="nav-item" *ngFor="let itemFooter of footerList">
+                <span class="nav-link px-2 text-muted">{{itemFooter}}</span>
+            </li>
         </ul>
         <p class="text-center text-muted">All Copyrights Reserved</p>
     </footer>
