--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -6,8 +6,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item" *ngFor="let mainLink of mainLinks; first as isFirst">
-          <a class="nav-link active" aria-current="page" href="#" *ngIf="isFirst; ngIfElse elseBlock">{{mainLink}}</a>
-          <a class="nav-link" aria-current="page" href="#" #elseBlock>{{mainLink}}</a>
+          <a class="nav-link active" aria-current="page" href="#" *ngIf="isFirst">{{mainLink}}</a>
+          <a class="nav-link" aria-current="page" href="#" *ngIf="!isFirst">{{mainLink}}</a>
         </li>
       </ul>
     </div>
