--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,4 @@
-<h1>The Page Requested Doesn't Exist</h1>
+<div class="container pagenotfound">
+    <h1 class="text-center">404</h1>
+    <p class="text-center">The Requested Page Doesn't Exist, sorry 😢</p>
+</div>
