--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid bg-dark text-white px-0">
-    <footer class="py-3 my-4">
+    <footer class="py-3 mt-4 mb-0">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item" *ngFor="let itemFooter of footerList">
                 <span class="nav-link px-2 text-muted">{{itemFooter}}</span>
