Finished New Content

--- a/src/app/angular/angular.component.html
+++ b/src/app/angular/angular.component.html
@@ -1,5 +1,5 @@
 <h1>Angular</h1>
-<p>This are my projects build in Angular</p>
+<p>This are my projects, build in Angular</p>
 <div class="container-lg">
     <div class="row row-cols-1">
         <div class="col" *ngFor="let project of projectList">
