--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
     <footer class="py-3 mt-4 mb-0">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item" *ngFor="let itemFooter of footerList">
-                <span class="nav-link px-2 text-muted">{{itemFooter}}</span>
+                <a class="nav-link px-2 text-muted" href="{{itemFooter.linkTo}}">{{itemFooter.linkTitle}}</a>
             </li>
         </ul>
         <p class="text-center text-muted">All Copyrights Reserved</p>
