--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,8 +6,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item" *ngFor="let mainLink of mainLinks; first as isFirst">
-          <a class="nav-link active" aria-current="page" href="#" *ngIf="isFirst">{{mainLink}}</a>
-          <a class="nav-link" aria-current="page" href="#" *ngIf="!isFirst">{{mainLink}}</a>
+          <a class="nav-link active" aria-current="page" href="{{mainLink.linkTo}}" *ngIf="isFirst">{{mainLink.linkTitle}}</a>
+          <a class="nav-link" aria-current="page" href="{{mainLink.linkTo}}" *ngIf="!isFirst">{{mainLink.linkTitle}}</a>
         </li>
       </ul>
     </div>
